2005-09-19  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/gtk/util/config.py: Renamed "type" variables to "type_"
	  to avoid possible namespace clashes with the built-in "type"
	  function.

2005-09-18  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/gtk/dialogs/spellcheck.py: Renamed from
	  lib/gaupol/gtk/spellcheck.py.

2005-09-18  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/gtk/actions/action.py (Action): Subclass Delegate.

	* lib/gaupol/gtk/delegates/delegate.py: Synced with delegate in base.

2005-09-17  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/gtk/actions:
	  lib/gaupol/gtk/actions/__init__.py:
	  lib/gaupol/gtk/actions/action.py:
	  New directory and files for the new action system.

	* lib/gaupol/gtk/util/config.py: Aligned stuff.

2005-09-11  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/gtk/cellrend/custom.py: Minor fixes.

	* lib/gaupol/gtk/cellrend/multiline.py: Minor fixes.
	  (CellRendererMultilineText.on_key_press_event): Removed Alt from
	  linebreaking accel masks.

	* lib/gaupol/gtk/cellrend/time.py: Minor fixes.
	  (CellRendererTime._change_to_zero): Removed unnecessary blocking of
	  key-press-event signal.

2005-09-11  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/base/delegates/editor.py:
	  lib/gaupol/base/delegates/filereader.py:
	  Minor fixes.

	* lib/gaupol/base/delegates/filewriter.py: Minor fixes.
	  (FileWriter._write_file): Use temp directory for backup.

	* lib/gaupol/constants.py: NEWLINE and FORMAT UI_NAMES are now
	  translatable.

2005-09-11  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/base/colcons.py:
	  lib/gaupol/constants.py:
	  Replaced vague attributes NAMES with CLASS_NAMES, ID_NAMES and
	  UI_NAMES and fixed all references in other modules to attribute
	  NAMES.

	* lib/gaupol/base/data.py (Data._assign_delegations):
	  Fixed automatic delegate listing.

	* lib/gaupol/base/delegates/classes.py (get_delegate_names):
	  Replaces function get_delegates.
