@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 
-"""gaupol.gui-wide column constants."""
+"""Column constants for gaupol.gtk."""
 
 
 NO   = 0
