@@ -1,5 +1,12 @@
 2005-09-19  Osmo Salomaa  otsaloma@cc.hut.fi
 
+	* lib/gaupol/gtk/colcons.py:
+	  lib/gaupol/gtk/dialogs/about.py:
+	  lib/gaupol/gtk/main.py:
+	  Minor fixes.
+
+2005-09-19  Osmo Salomaa  otsaloma@cc.hut.fi
+
 	* lib/gaupol/gtk/util/config.py: Renamed "type" variables to "type_"
 	  to avoid possible namespace clashes with the built-in "type"
 	  function.
